--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script defer src="./assets/js/index.js"></script>
     <title>DOM</title>
   </head>
   <body>
     <h1>Hello DOM</h1>
     <img src="" alt="">
-    <button disabled>Button</button>
+    <button>Click me</button>
   </body>
 </html>
