--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <h1>Hello DOM</h1>
     <img src="" alt="">
-    <button>Click me</button>
+    <button id="test">Click me</button>
   </body>
 </html>
