--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script defer src="./assets/js/index.js"></script>
     <title>DOM</title>
   </head>
   <body>
     <h1>Hello DOM</h1>
-    <img src="" alt="">
+    <img src="" alt="" />
     <button id="test">Click me</button>
+<!--      -->
+
+    <h1>H1 1</h1>
+    <div>
+      <h1>H1 2</h1>
+
+      <section>
+        <!-- FIND THIS h1 -->
+        <h1>Find ME</h1> 
+        <img src="" alt="img 1">
+        <p>
+          par1
+          <span>asdsad</span>
+        </p>
+      </section>
+      <!-- FIND THIS IMG -->
+      <img src="" alt="Find ME">
+    </div>
+    <section class="section">
+      <h2>asdsad</h2>
+      <!-- FIND THIS P -->
+      <p>Find ME</p>
+    </section>
+
+
   </body>
 </html>
