Add removeEventListener example

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <h1>Hello DOM</h1>
     <img src="" alt="" />
-    <button id="test">Click me</button>
+    <button id="btn">Click me</button>
 <!--      -->
-
+<!-- 
     <h1>H1 1</h1>
     <div>
       <h1>H1 2</h1>
 
       <section>
-        <!-- FIND THIS h1 -->
+        <!-- FIND THIS h1
         <h1>Find ME</h1> 
         <img src="" alt="img 1">
         <p>
@@ -26,14 +26,14 @@
           <span>asdsad</span>
         </p>
       </section>
-      <!-- FIND THIS IMG -->
+      <!-- FIND THIS IMG 
       <img src="" alt="Find ME">
     </div>
     <section class="section">
       <h2>asdsad</h2>
-      <!-- FIND THIS P -->
+      <!-- FIND THIS P 
       <p>Find ME</p>
-    </section>
+    </section> -->
 
 
   </body>
