--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Hello DOM</h1>
     <img src="" alt="" />
-    <button id="btn">Click me</button>
+    <button id="btn">Click me <span>other text</span></button>
 <!--      -->
 <!-- 
     <h1>H1 1</h1>
