Add hometask solutuions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h1>Hello DOM</h1>
     <img src="" alt="" />
     <button id="btn">Click me <span>other text</span></button>
+
+    <div>
+      <p id="display-p">Click button to see result</p>
+      <button id="number-btn">Enter number</button>
+    </div>
 <!--      -->
 <!-- 
     <h1>H1 1</h1>
