Add event delegation example

--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
       <p id="display-p">Click button to see result</p>
       <button id="number-btn">Enter number</button>
     </div>
-<!--      -->
-<!-- 
+
+    <div style="padding: 20px; border: 5px solid black" id="btn-container">
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>4</button>
+    </div>
+    <!--      -->
+    <!-- 
     <h1>H1 1</h1>
     <div>
       <h1>H1 2</h1>
@@ -39,7 +46,5 @@
       <!-- FIND THIS P 
       <p>Find ME</p>
     </section> -->
-
-
   </body>
 </html>
