Add task solution

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       <button>3</button>
       <button>4</button>
     </div>
+
+    <div style="padding: 20px; border: 5px solid black" id="color-task">
+      <button>red</button>
+      <button>blue</button>
+      <button>green</button>
+      <button>gray</button>
+    </div>
     <!--      -->
     <!-- 
     <h1>H1 1</h1>
