Add event methods example

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       <button>green</button>
       <button>gray</button>
     </div>
+
+    <form id="form">
+      <label>
+        Some text:
+        <input type="text" name="thisIsName">
+      </label>
+      <button type="submit">Submit form</button>
+      <button type="reset">Reset form</button>
+    </form>
     <!--      -->
     <!-- 
     <h1>H1 1</h1>
