--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
 
     <form id="form">
+      <p>test par</p>
       <label>
         Some text:
         <input type="text" name="thisIsName">
