Add form task solution

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </div>
 
     <form id="form">
-      <p>test par</p>
+      <p id="result-p">test par</p>
       <label>
         Some text:
-        <input type="text" name="thisIsName">
+        <input type="text" name="number">
       </label>
       <button type="submit">Submit form</button>
       <button type="reset">Reset form</button>
