--- a/index.html
+++ b/index.html
@@ -35,11 +35,18 @@
       <p id="result-p">test par</p>
       <label>
         Some text:
-        <input type="text" name="number">
+        <input type="text" name="number" />
       </label>
       <button type="submit">Submit form</button>
-      <button type="reset">Reset form</button>
+      <button type="reset" disabled>Reset form</button>
     </form>
+
+    <img
+      id="img"
+      src="https://imageio.forbes.com/specials-images/imageserve/5d35eacaf1176b0008974b54/0x0.jpg"
+      alt="car"
+      style="width:400px;"
+    />
     <!--      -->
     <!-- 
     <h1>H1 1</h1>
