Add attribute task with multiple solutions

--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@
       id="img"
       src="https://imageio.forbes.com/specials-images/imageserve/5d35eacaf1176b0008974b54/0x0.jpg"
       alt="car"
-      style="width:400px;"
+      style="width: 400px"
     />
+
+    <div>
+      <img
+        style="width: 400px"
+        id="carImg"
+        alt="car"
+      />
+      <button id="carBtn">Switch</button>
+    </div>
     <!--      -->
     <!-- 
     <h1>H1 1</h1>
