Add data-* example

--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
     />
 
     <div>
-      <img
-        style="width: 400px"
-        id="carImg"
-        alt="car"
-      />
+      <img style="width: 400px" id="carImg" alt="car" />
       <button id="carBtn">Switch</button>
     </div>
+
+    <button
+      id="dataBtn"
+      data-key="localhost:3000/login"
+      data-some-long-name="snjbdsjfnbdskjfdsbfkds"
+    >
+      Login
+    </button>
+    <!-- <button data-test="localhost:3000/registration">Registration</button> -->
     <!--      -->
     <!-- 
     <h1>H1 1</h1>
