Add data-attr task with solution

--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
     >
       Login
     </button>
+
+    <div 
+      style="padding: 20px; border: 5px solid black" 
+      id="data-color-task"
+    >
+      <button data-bg-color="red">Червоний</button>
+      <button data-bg-color="#0000fa">Синій</button>
+      <button data-bg-color="limegreen">Зелений</button>
+      <button data-bg-color="grey">Сірий</button>
+    </div>
+
     <!-- <button data-test="localhost:3000/registration">Registration</button> -->
     <!--      -->
     <!-- 
