--- a/index.html
+++ b/index.html
@@ -71,29 +71,8 @@
       <button data-bg-color="grey">Сірий</button>
     </div>
 
-    <!-- <button data-test="localhost:3000/registration">Registration</button> -->
-    <!--      -->
-    <!-- 
-    <h1>H1 1</h1>
-    <div>
-      <h1>H1 2</h1>
-
-      <section>
-        <!-- FIND THIS h1
-        <h1>Find ME</h1> 
-        <img src="" alt="img 1">
-        <p>
-          par1
-          <span>asdsad</span>
-        </p>
-      </section>
-      <!-- FIND THIS IMG 
-      <img src="" alt="Find ME">
+    <div id="root" class="root">
+      <p>test par</p>
     </div>
-    <section class="section">
-      <h2>asdsad</h2>
-      <!-- FIND THIS P 
-      <p>Find ME</p>
-    </section> -->
   </body>
 </html>
