Add createElement task solution

--- a/index.html
+++ b/index.html
@@ -74,5 +74,10 @@
     <div id="root" class="root">
       <p>test par</p>
     </div>
+
+    <form id="home-form">
+      <input type="text" name="text">
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
