Add delete task solution

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <button>green</button>
       <button>gray</button>
     </div>
+    
+    <button id="selfDestructBtn">X</button>
 
     <form id="form">
       <p id="result-p">test par</p>
