Add className and classList examples

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <button>green</button>
       <button>gray</button>
     </div>
-    
+
     <button id="selfDestructBtn">X</button>
 
     <form id="form">
@@ -73,7 +73,7 @@
       <button data-bg-color="grey">Сірий</button>
     </div>
 
-    <div id="root" class="root">
+    <div id="root" class="root root-2">
       <p>test par</p>
     </div>
 
