Add another card example

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
           <p class="usualPrice">19999 UAH</p>
           <p class="discountedPrice">15999 UAH</p>
           <p class="almostOut">Закінчується</p>
+        </article>
+      </li>
+      <li class="cardItem">
+        <article class="cardArticle">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNIAjjoy5Z1git_Z1141MNOGrxPZOuFgvtUQ&usqp=CAU" alt="product" class="cardImg">
+          <h2 class="cardTitle">Product 3</h2>
+          <p class="usualPrice">19999 UAH</p>
+          <p class="discountedPrice">15999 UAH</p>
           <p class="out">Немає в наявності</p>
         </article>
       </li>
