Add basic render method example

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>DOM</title>
   </head>
   <body>
-    <ul class="cardList">
-      <li class="cardItem">
+    <ul id="root" class="cardList">
+      <!-- <li class="cardItem">
         <article class="cardArticle">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNIAjjoy5Z1git_Z1141MNOGrxPZOuFgvtUQ&usqp=CAU" alt="product" class="cardImg">
           <h2 class="cardTitle">Product 1</h2>
@@ -34,7 +34,7 @@
           <p class="discountedPrice">15999 UAH</p>
           <p class="out">Немає в наявності</p>
         </article>
-      </li>
+      </li> -->
     </ul>
   </body>
 </html>
