Add async code basic example

--- a/index.html
+++ b/index.html
@@ -4,83 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script defer src="./assets/js/index.js"></script>
-    <script defer src="./assets/js/destructuring.js"></script>
+    <!-- <script defer src="./assets/js/index.js"></script>
+    <script defer src="./assets/js/destructuring.js"></script> -->
+    <script defer src="./assets/js/async.js"></script>
     <title>DOM</title>
   </head>
   <body>
     <h1>Hello DOM</h1>
-    <img src="" alt="" />
-    <button id="btn">Click me <span>other text</span></button>
-
-    <div>
-      <p id="display-p">Click button to see result</p>
-      <button id="number-btn">Enter number</button>
-    </div>
-
-    <div style="padding: 20px; border: 5px solid black" id="btn-container">
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>4</button>
-    </div>
-
-    <div style="padding: 20px; border: 5px solid black" id="color-task">
-      <button>red</button>
-      <button>blue</button>
-      <button>green</button>
-      <button>gray</button>
-    </div>
-
-    <button id="selfDestructBtn">X</button>
-
-    <form id="form">
-      <p id="result-p">test par</p>
-      <label>
-        Some text:
-        <input type="text" name="number" />
-      </label>
-      <button type="submit">Submit form</button>
-      <button type="reset" disabled>Reset form</button>
-    </form>
-
-    <img
-      id="img"
-      src="https://imageio.forbes.com/specials-images/imageserve/5d35eacaf1176b0008974b54/0x0.jpg"
-      alt="car"
-      style="width: 400px"
-    />
-
-    <div>
-      <img style="width: 400px" id="carImg" alt="car" />
-      <button id="carBtn">Switch</button>
-    </div>
-
-    <button
-      id="dataBtn"
-      data-key="localhost:3000/login"
-      data-some-long-name="snjbdsjfnbdskjfdsbfkds"
-    >
-      Login
-    </button>
-
-    <div 
-      style="padding: 20px; border: 5px solid black" 
-      id="data-color-task"
-    >
-      <button data-bg-color="red">Червоний</button>
-      <button data-bg-color="#0000fa">Синій</button>
-      <button data-bg-color="limegreen">Зелений</button>
-      <button data-bg-color="grey">Сірий</button>
-    </div>
-
-    <div id="root" class="root root-2">
-      <p>test par</p>
-    </div>
-
-    <form id="home-form">
-      <input type="text" name="text">
-      <button type="submit">Submit</button>
-    </form>
+    <input type="text">
+    <button id="btn">Click me</button>
   </body>
 </html>
