Add basic promise creation example

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- <script defer src="./assets/js/index.js"></script>
     <script defer src="./assets/js/destructuring.js"></script> -->
-    <script defer src="./assets/js/async.js"></script>
+    <!-- <script defer src="./assets/js/async.js"></script> -->
+    <script defer src="./assets/js/promises.js"></script>
     <title>DOM</title>
   </head>
   <body>
