--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <h1>Hello DOM</h1>
     <input type="text">
     <button id="btn">Click me</button>
+    <div id="loading">LOADING...</div>
   </body>
 </html>
